2005-05-13  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter.c: No longer set default
	  font size.  Thanks to Erwann Chenede for catching
	  this.

2005-05-10  Leena Gunda  <leena.gunda@wipro.com>

	* daemon/server.c (do_server_wait): Check if a host 
	  has been selected from XDMCP chooser and change 
	  servstat accordingly. Fixes bug where Xnest session
	  quits when a host is selected from XDMCP chooser.

2005-05-06  Brian Cameron  <brian.cameron@sun.com>

	* daemon/auth.c, daemon/display.c, daemon/gdm.[ch],
	  daemon/server.c, daemon/slave.c, daemon/verify-pam.c,
	  daemon/xdmcp.c, AUTHORS:  Rename console and
	  TYPE_LOCAL in preparation for adding the dynamic
	  Xserver patch.  This is part of the fix for bug
	  #168219.  Patch provided by Bob Terek.

2005-05-04  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmcommon.[ch], gui/gdmlogin.c, 
	  gui/greeter/greeter_session.c:  Refactored
	  the code so session menu setup code is no
	  longer duplicated in gdmlogin adn gdmgreeter.
	  
2005-05-03  Brian Cameron  <brian.cameron@sun.com>

	* Makefile.am: Correct Makefile so that if 
	  CONSOLE_HELPER is set, we don't try to create
	  an /sbin/gdmsetup symlink to gdmsetup.  Now
	  gdmsetup is already installed to /sbin always.
	  Fixes #302319.
	* gui/gdmsetup.c: Fix sensitivity of the 
	  "Delete Theme" button.  Fixes bug #302342.
	* daemon/gdm.h, gui/gdmlogin.c, gui/greeter/greeter.c:
	  Now only set user/password entry to PAM_MAX_RESP_SIZE
	  if HAVE_PAM is defined, otherwise set it to 
	  GDM_MAX_PASS set to 256 in daemon/gdm.h.  This 
	  allows gdm to be used on systems that do not have
	  PAM.  Fixes #302228.
	* daemon/gdm.h, docs/C/gdm.xml, gui/gdmsetup.c,
	  gui/greeter/greeter.c, gui/gdmsetup.glade, 
	  gui/gdmsetup-strings.c, config/gdm.conf.in:
	  Now support random theme.  Fixes #302354.
	* gui/gdmcommon.c, gui/gdmlogin.c,
	  gui/greeter/greeter_session.c, gui/Makefile.am,
	  added gui/gdmsession.[ch]:  Support better